--- a/SmartThingsIntegration/phonetrack.cfg
+++ b/SmartThingsIntegration/phonetrack.cfg
@@ -7,4 +7,6 @@ offline_retries = 7
 #
 port = 50001
 bridge_address = 192.168.n.nnn:8082
+console_output = yes
+logfile_output = yes
 logfile = phonetrack.log
