--- a/SmartThingsIntegration/phonetrack.cfg
+++ b/SmartThingsIntegration/phonetrack.cfg
@@ -1,9 +1,9 @@
 [config]
 phone_ips = 192.168.n.nnn, 192.168.n.nnn
 phone_names = hubby, wifey
+phone_offline_retries = 7, 10
 #
 ping_interval = 12
-offline_retries = 7
 #
 port = 50001
 bridge_address = 192.168.n.nnn:8088
